Update with authentic Kerala images - Vivekananda Rock, Padmanabhaswamy Temple, Varkala Beach, Kerala Houseboat

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('https://images.unsplash.com/photo-1602216056096-3b40cc0c9944?w=1200') center/cover;
+            background: url('https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-09-051Z-973a1e9e-chat-image-1768286349032-3.jpg') center/cover;
             opacity: 0.3;
             z-index: 0;
         }
@@ -449,12 +449,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1582510003544-4d00b7f74220?w=600" alt="Vivekananda Rock Memorial">
-                    <div class="image-caption">🛕 Vivekananda Rock Memorial</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-675Z-358acf06-chat-image-1768286348647-0.jpg" alt="Vivekananda Rock Memorial and Thiruvalluvar Statue">
+                    <div class="image-caption">🛕 Vivekananda Rock Memorial & Thiruvalluvar Statue</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1609137144813-7d9921338f24?w=600" alt="Kanyakumari Sunset">
-                    <div class="image-caption">🌅 Kanyakumari Sunset</div>
+                    <img src="https://images.unsplash.com/photo-1582510003544-4d00b7f74220?w=800&q=80" alt="Kanyakumari Sunset">
+                    <div class="image-caption">🌅 Kanyakumari Tri-Sea Sunset</div>
                 </div>
             </div>
 
@@ -536,12 +536,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1587474260584-136574528ed5?w=600" alt="Padmanabhapuram Palace">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Padmanabhapuram_Palace.jpg/800px-Padmanabhapuram_Palace.jpg" alt="Padmanabhapuram Palace">
                     <div class="image-caption">🏰 Padmanabhapuram Palace</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1564507592333-c60657eea523?w=600" alt="Temple Architecture">
-                    <div class="image-caption">🛕 Suchindram Temple</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-835Z-f7e7604f-chat-image-1768286348798-1.jpg" alt="Padmanabhaswamy Temple">
+                    <div class="image-caption">🛕 South Indian Temple Architecture</div>
                 </div>
             </div>
 
@@ -623,12 +623,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1596422846543-75c6fc197f07?w=600" alt="Poovar Island">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Poovar_Island%2C_Kerala.jpg/800px-Poovar_Island%2C_Kerala.jpg" alt="Poovar Island">
                     <div class="image-caption">🛶 Poovar Island Backwaters</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600" alt="Beach">
-                    <div class="image-caption">🏖️ Poovar Beach</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Poovar_Beach.jpg/800px-Poovar_Beach.jpg" alt="Poovar Beach">
+                    <div class="image-caption">🏖️ Poovar Golden Beach</div>
                 </div>
             </div>
 
@@ -709,12 +709,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1609137144813-7d9921338f24?w=600" alt="Temple">
-                    <div class="image-caption">🛕 Padmanabhaswamy Temple</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Sree_Padmanabhaswamy_Temple_Gopuram.jpg/800px-Sree_Padmanabhaswamy_Temple_Gopuram.jpg" alt="Padmanabhaswamy Temple">
+                    <div class="image-caption">🛕 Padmanabhaswamy Temple Gopuram</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1587474260584-136574528ed5?w=600" alt="Palace">
-                    <div class="image-caption">🏰 Kuthiramalika Palace</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Napier_Museum_Trivandrum.jpg/800px-Napier_Museum_Trivandrum.jpg" alt="Napier Museum">
+                    <div class="image-caption">🏛️ Napier Museum</div>
                 </div>
             </div>
 
@@ -795,11 +795,11 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1596422846543-75c6fc197f07?w=600" alt="Varkala Beach">
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-938Z-1dfec06a-chat-image-1768286348919-2.jpg" alt="Varkala Beach">
                     <div class="image-caption">🏖️ Varkala Cliff Beach</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600" alt="Alleppey">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Alleppey_Beach.jpg/800px-Alleppey_Beach.jpg" alt="Alleppey Beach">
                     <div class="image-caption">🌅 Alleppey Beach</div>
                 </div>
             </div>
@@ -879,12 +879,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1602216056096-3b40cc0c9944?w=600" alt="Houseboat">
-                    <div class="image-caption">🛶 Kerala Houseboat</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-09-051Z-973a1e9e-chat-image-1768286349032-3.jpg" alt="Kerala Houseboat">
+                    <div class="image-caption">🛶 Kerala Houseboat on Backwaters</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1596422846543-75c6fc197f07?w=600" alt="Backwaters">
-                    <div class="image-caption">🌅 Backwater Sunset</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Alappuzha_Backwaters.jpg/800px-Alappuzha_Backwaters.jpg" alt="Alleppey Backwaters">
+                    <div class="image-caption">🌅 Alleppey Backwater Sunset</div>
                 </div>
             </div>
 
@@ -959,11 +959,11 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1609137144813-7d9921338f24?w=600" alt="Kochi">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Marine_Drive_Kochi.jpg/800px-Marine_Drive_Kochi.jpg" alt="Marine Drive Kochi">
                     <div class="image-caption">🌊 Marine Drive Kochi</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1596422846543-75c6fc197f07?w=600" alt="Sunrise">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Backwaters_sunrise.jpg/800px-Backwaters_sunrise.jpg" alt="Backwater Sunrise">
                     <div class="image-caption">🌅 Backwater Sunrise</div>
                 </div>
             </div>
@@ -1042,11 +1042,11 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1520208422220-d12a3c588e6c?w=600" alt="Athirappilly Waterfalls">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Athirappilly_waterfalls.jpg/800px-Athirappilly_waterfalls.jpg" alt="Athirappilly Waterfalls">
                     <div class="image-caption">💦 Athirappilly Waterfalls</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600" alt="Waterfall">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Vazhachal_Falls.jpg/800px-Vazhachal_Falls.jpg" alt="Vazhachal Falls">
                     <div class="image-caption">🌊 Vazhachal Falls</div>
                 </div>
             </div>
@@ -1126,12 +1126,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1609137144813-7d9921338f24?w=600" alt="Chinese Fishing Nets">
-                    <div class="image-caption">🎣 Chinese Fishing Nets</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Chinese_fishing_nets_Kochi.jpg/800px-Chinese_fishing_nets_Kochi.jpg" alt="Chinese Fishing Nets">
+                    <div class="image-caption">🎣 Chinese Fishing Nets Fort Kochi</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1587474260584-136574528ed5?w=600" alt="Fort Kochi">
-                    <div class="image-caption">🏛️ Mattancherry Palace</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Mattancherry_Palace.jpg/800px-Mattancherry_Palace.jpg" alt="Mattancherry Palace">
+                    <div class="image-caption">🏛️ Mattancherry Palace (Dutch Palace)</div>
                 </div>
             </div>
 
@@ -1214,11 +1214,11 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1587474260584-136574528ed5?w=600" alt="Art Gallery">
-                    <div class="image-caption">🎨 Kochi Biennale</div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Hill_Palace_Tripunithura.jpg/800px-Hill_Palace_Tripunithura.jpg" alt="Hill Palace">
+                    <div class="image-caption">🏰 Hill Palace Museum</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600" alt="Sunset Cruise">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Kochi_Harbor_Sunset.jpg/800px-Kochi_Harbor_Sunset.jpg" alt="Kochi Harbor">
                     <div class="image-caption">🌅 Kochi Harbor Sunset</div>
                 </div>
             </div>
