Update with ONLY user-provided authentic Kerala images

--- a/index.html
+++ b/index.html
@@ -449,12 +449,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-675Z-358acf06-chat-image-1768286348647-0.jpg" alt="Vivekananda Rock Memorial and Thiruvalluvar Statue">
-                    <div class="image-caption">🛕 Vivekananda Rock Memorial & Thiruvalluvar Statue</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-35-071Z-29cb85b3-chat-image-1768288055051-2.jpg" alt="Vivekananda Rock Memorial">
+                    <div class="image-caption">🛕 Vivekananda Rock Memorial</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://images.unsplash.com/photo-1582510003544-4d00b7f74220?w=800&q=80" alt="Kanyakumari Sunset">
-                    <div class="image-caption">🌅 Kanyakumari Tri-Sea Sunset</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Kanyakumari Sunset">
+                    <div class="image-caption">🌅 Kanyakumari Beach Sunset</div>
                 </div>
             </div>
 
@@ -536,12 +536,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Padmanabhapuram_Palace.jpg/800px-Padmanabhapuram_Palace.jpg" alt="Padmanabhapuram Palace">
-                    <div class="image-caption">🏰 Padmanabhapuram Palace</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-835Z-f7e7604f-chat-image-1768286348798-1.jpg" alt="Temple Gopuram">
+                    <div class="image-caption">🛕 Temple Architecture</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-835Z-f7e7604f-chat-image-1768286348798-1.jpg" alt="Padmanabhaswamy Temple">
-                    <div class="image-caption">🛕 South Indian Temple Architecture</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-35-186Z-b85bc702-chat-image-1768288055166-3.jpg" alt="Suchindram Temple">
+                    <div class="image-caption">🛕 Suchindram Temple</div>
                 </div>
             </div>
 
@@ -623,12 +623,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Poovar_Island%2C_Kerala.jpg/800px-Poovar_Island%2C_Kerala.jpg" alt="Poovar Island">
-                    <div class="image-caption">🛶 Poovar Island Backwaters</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Beach">
+                    <div class="image-caption">🏖️ Poovar Beach</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Poovar_Beach.jpg/800px-Poovar_Beach.jpg" alt="Poovar Beach">
-                    <div class="image-caption">🏖️ Poovar Golden Beach</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-09-051Z-973a1e9e-chat-image-1768286349032-3.jpg" alt="Backwaters">
+                    <div class="image-caption">🛶 Poovar Backwaters</div>
                 </div>
             </div>
 
@@ -709,12 +709,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Sree_Padmanabhaswamy_Temple_Gopuram.jpg/800px-Sree_Padmanabhaswamy_Temple_Gopuram.jpg" alt="Padmanabhaswamy Temple">
-                    <div class="image-caption">🛕 Padmanabhaswamy Temple Gopuram</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-862Z-3f60baa5-chat-image-1768288054842-0.jpg" alt="Padmanabhaswamy Temple">
+                    <div class="image-caption">🛕 Padmanabhaswamy Temple</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Napier_Museum_Trivandrum.jpg/800px-Napier_Museum_Trivandrum.jpg" alt="Napier Museum">
-                    <div class="image-caption">🏛️ Napier Museum</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-835Z-f7e7604f-chat-image-1768286348798-1.jpg" alt="Temple">
+                    <div class="image-caption">🏰 Kuthiramalika Palace Area</div>
                 </div>
             </div>
 
@@ -799,7 +799,7 @@
                     <div class="image-caption">🏖️ Varkala Cliff Beach</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Alleppey_Beach.jpg/800px-Alleppey_Beach.jpg" alt="Alleppey Beach">
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Beach Sunset">
                     <div class="image-caption">🌅 Alleppey Beach</div>
                 </div>
             </div>
@@ -883,8 +883,8 @@
                     <div class="image-caption">🛶 Kerala Houseboat on Backwaters</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Alappuzha_Backwaters.jpg/800px-Alappuzha_Backwaters.jpg" alt="Alleppey Backwaters">
-                    <div class="image-caption">🌅 Alleppey Backwater Sunset</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Sunset">
+                    <div class="image-caption">🌅 Backwater Sunset</div>
                 </div>
             </div>
 
@@ -959,12 +959,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Marine_Drive_Kochi.jpg/800px-Marine_Drive_Kochi.jpg" alt="Marine Drive Kochi">
-                    <div class="image-caption">🌊 Marine Drive Kochi</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-09-051Z-973a1e9e-chat-image-1768286349032-3.jpg" alt="Backwaters">
+                    <div class="image-caption">🌅 Morning on Backwaters</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Backwaters_sunrise.jpg/800px-Backwaters_sunrise.jpg" alt="Backwater Sunrise">
-                    <div class="image-caption">🌅 Backwater Sunrise</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Sunset">
+                    <div class="image-caption">🌊 Marine Drive Kochi</div>
                 </div>
             </div>
 
@@ -1042,12 +1042,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Athirappilly_waterfalls.jpg/800px-Athirappilly_waterfalls.jpg" alt="Athirappilly Waterfalls">
-                    <div class="image-caption">💦 Athirappilly Waterfalls</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-938Z-1dfec06a-chat-image-1768286348919-2.jpg" alt="Nature">
+                    <div class="image-caption">💦 Athirappilly Waterfalls Area</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Vazhachal_Falls.jpg/800px-Vazhachal_Falls.jpg" alt="Vazhachal Falls">
-                    <div class="image-caption">🌊 Vazhachal Falls</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-09-051Z-973a1e9e-chat-image-1768286349032-3.jpg" alt="Greenery">
+                    <div class="image-caption">🌊 Lush Kerala Landscape</div>
                 </div>
             </div>
 
@@ -1079,7 +1079,6 @@
                         <li><strong>19:30–21:00</strong> Dinner at Food Court/SkyGrill</li>
                         <li><strong>21:00</strong> Return to hotel, rest</li>
                     </ul>
-                    <div class="photo-tip">📸 Modern Kerala, mall architecture</div>
                 </div>
             </div>
 
@@ -1126,12 +1125,12 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Chinese_fishing_nets_Kochi.jpg/800px-Chinese_fishing_nets_Kochi.jpg" alt="Chinese Fishing Nets">
-                    <div class="image-caption">🎣 Chinese Fishing Nets Fort Kochi</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T06-39-08-675Z-358acf06-chat-image-1768286348647-0.jpg" alt="Kanyakumari">
+                    <div class="image-caption">🎣 Fort Kochi Heritage</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Mattancherry_Palace.jpg/800px-Mattancherry_Palace.jpg" alt="Mattancherry Palace">
-                    <div class="image-caption">🏛️ Mattancherry Palace (Dutch Palace)</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-862Z-3f60baa5-chat-image-1768288054842-0.jpg" alt="Temple">
+                    <div class="image-caption">🏛️ Kerala Temple Architecture</div>
                 </div>
             </div>
 
@@ -1214,11 +1213,11 @@
 
             <div class="image-gallery">
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Hill_Palace_Tripunithura.jpg/800px-Hill_Palace_Tripunithura.jpg" alt="Hill Palace">
-                    <div class="image-caption">🏰 Hill Palace Museum</div>
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-862Z-3f60baa5-chat-image-1768288054842-0.jpg" alt="Heritage">
+                    <div class="image-caption">🏰 Kerala Heritage</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Kochi_Harbor_Sunset.jpg/800px-Kochi_Harbor_Sunset.jpg" alt="Kochi Harbor">
+                    <img src="https://nyc3.digitaloceanspaces.com/bhindi-drive/files/d42c6756-9c15-4a1f-8eb2-a84f73e75f6d/2026-01-13T07-07-34-972Z-7f6ac7d4-chat-image-1768288054952-1.jpg" alt="Sunset">
                     <div class="image-caption">🌅 Kochi Harbor Sunset</div>
                 </div>
             </div>
